--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .profileImg {
-  max-width: 20%;
-  transform: translateY(-140px) translateX(20px);
+  max-width: 22%;
+  transform: translateY(-86%) translateX(20px);
 }
 .infoBox {
   background-color: #dde7f1;
 }
 .name {
-  margin-top: -130px;
+  margin-top: -15%;
+}
+body {
+  background-color: #f4f2ee;
+  padding: 10%;
 }
