--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 .header {
   max-height: 60px;
   z-index: 999 !important;
@@ -85,6 +87,7 @@
   border-bottom: 1px solid #ccc;
   transition: top 1s ease;
   min-height: 50px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .show-toolbar {
@@ -115,6 +118,5 @@ body {
 /* FINE CSS GIOVANNI */
 
 .noToggle::after {
-
   display: none;
 }
