--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 .header {
   max-height: 60px;
@@ -109,6 +109,10 @@
 }
 .name {
   margin-top: -15%;
+}
+.contBody {
+  max-width: 90%;
+  margin-inline: auto;
 }
 body {
   background-color: #f4f2ee;
