--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 .header {
   max-height: 60px;
@@ -117,4 +117,15 @@ body {
 
 .noToggle::after {
   display: none;
+}
+.customRow {
+  height: calc(100vh - 65px);
+}
+
+.nav-pills .nav-link.active {
+  background-color: #edf3f8 !important;
+  border-left: 3px solid green;
+}
+.nav-pills .nav-link {
+  width: 100%;
 }
