--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,36 @@ body {
   p {
     color: black !important;
   }
+}
 
-  border-bottom: solid 2px black !important;
+.navbar .nav-link.active {
+  position: relative;
+}
+
+.navbar .nav-link.active::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: width 0.3s ease-out;
+  transform: translateX(0);
+}
+
+@keyframes expand {
+  0% {
+    width: 0;
+    left: 50%;
+  }
+  100% {
+    width: 100%;
+    left: 0;
+  }
+}
+
+.navbar .nav-link.active:hover::after,
+.navbar .nav-link.active:focus::after {
+  animation: expand 0.4s forwards;
 }
