--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css');
 
 .header {
   max-height: 60px;
@@ -147,4 +147,13 @@ body {
 .nav-tabs .nav-link.active {
   border-bottom: solid 4px green !important;
   color: green !important;
+}
+
+.customJobCard:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.customPJobs:hover > p {
+  color: black !important;
 }
